@@ -181,7 +181,7 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>2.0.0-beta.5</version>
+            <version>2.0.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -290,6 +290,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>2.17</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=warn
+                        </argLine>
+                    </configuration>
                 </plugin>
 
             </plugins>
